exports[`Item component renders a completed task correctly 1`] = `
<Component
  item={
    Object {
      "__typename": "Task",
      "isCompleted": true,
      "name": "Task",
    }
  }>
  <ListItem
    activeClassName="md-text--theme-primary"
    component="div"
    expanderIconChildren="keyboard_arrow_down"
    leftAvatar={
      <Avatar
        icon={
          <FontIcon
            iconClassName="material-icons"
            style={
              Object {
                "color": "#00E676",
              }
            }>
            done
          </FontIcon>
        }
        onClick={undefined}
        suffixes={
          Array [
            "red",
            "pink",
            "purple",
            "deep-purple",
            "indigo",
            "blue",
            "light-blue",
            "cyan",
            "teal",
            "green",
            "light-green",
            "lime",
            "yellow",
            "amber",
            "orange",
            "deep-orange",
            "brown",
            "grey",
            "blue-grey",
          ]
        } />
    }
    primaryText="Task"
    threeLines={true}>
    <li
      className="md-list-item">
      <AccessibleFakeButtonInked
        __SUPER_SECRET_REF__={[Function]}
        aria-expanded={null}
        className="md-list-tile md-text md-list-tile--avatar"
        component="div"
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}>
        <AccessibleFakeButton
          aria-expanded={null}
          className="md-list-tile md-text md-list-tile--avatar"
          component="div"
          ink={
            <InkContainer
              className={undefined}
              disabledInteractions={undefined}
              inkClassName={undefined}
              inkStyle={undefined}
              style={undefined}
              transitionEnterTimeout={450}
              transitionLeaveTimeout={300}
              transitionOverlap={150}
              waitForInkTransition={undefined} />
          }
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}>
          <div
            aria-expanded={null}
            aria-pressed={false}
            className="md-fake-btn md-pointer--hover md-list-tile md-text md-list-tile--avatar"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}>
            <InkContainer
              transitionEnterTimeout={450}
              transitionLeaveTimeout={300}
              transitionOverlap={150}>
              <ReactTransitionGroup
                childFactory={[Function]}
                className="md-ink-container"
                component="div">
                <div
                  className="md-ink-container" />
              </ReactTransitionGroup>
            </InkContainer>
            <TileAddon
              activeClassName="md-text--theme-primary"
              avatar={
                <Avatar
                  icon={
                    <FontIcon
                      iconClassName="material-icons"
                      style={
                        Object {
                          "color": "#00E676",
                        }
                      }>
                      done
                    </FontIcon>
                  }
                  onClick={undefined}
                  suffixes={
                    Array [
                      "red",
                      "pink",
                      "purple",
                      "deep-purple",
                      "indigo",
                      "blue",
                      "light-blue",
                      "cyan",
                      "teal",
                      "green",
                      "light-green",
                      "lime",
                      "yellow",
                      "amber",
                      "orange",
                      "deep-orange",
                      "brown",
                      "grey",
                      "blue-grey",
                    ]
                  } />
              }>
              <div
                className="md-tile-addon md-tile-addon--avatar">
                <Avatar
                  icon={
                    <FontIcon
                      iconClassName="material-icons"
                      style={
                        Object {
                          "color": "#00E676",
                        }
                      }>
                      done
                    </FontIcon>
                  }
                  suffixes={
                    Array [
                      "red",
                      "pink",
                      "purple",
                      "deep-purple",
                      "indigo",
                      "blue",
                      "light-blue",
                      "cyan",
                      "teal",
                      "green",
                      "light-green",
                      "lime",
                      "yellow",
                      "amber",
                      "orange",
                      "deep-orange",
                      "brown",
                      "grey",
                      "blue-grey",
                    ]
                  }>
                  <div
                    className="md-inline-block md-avatar md-avatar--default">
                    <div
                      className="md-avatar-content">
                      <FontIcon
                        iconClassName="material-icons"
                        style={
                          Object {
                            "color": "#00E676",
                          }
                        }>
                        <i
                          className="md-icon material-icons"
                          style={
                            Object {
                              "color": "#00E676",
                            }
                          }>
                          done
                        </i>
                      </FontIcon>
                    </div>
                  </div>
                </Avatar>
              </div>
            </TileAddon>
            <ListItemText
              activeClassName="md-text--theme-primary"
              className="md-tile-content--left-avatar"
              primaryText="Task"
              threeLines={true}>
              <div
                className="md-tile-content md-tile-content--left-avatar">
                <div
                  className="md-tile-text--primary md-text">
                  Task
                </div>
              </div>
            </ListItemText>
            <TileAddon
              activeClassName="md-text--theme-primary" />
          </div>
        </AccessibleFakeButton>
      </AccessibleFakeButtonInked>
    </li>
  </ListItem>
</Component>
`;

exports[`Item component renders a project correctly 1`] = `
<Component
  item={
    Object {
      "__typename": "Project",
      "name": "Project",
    }
  }>
  <ListItem
    activeClassName="md-text--theme-primary"
    component="div"
    expanderIconChildren="keyboard_arrow_down"
    leftAvatar={
      <Avatar
        icon={
          <FontIcon
            iconClassName="material-icons"
            style={
              Object {
                "color": undefined,
              }
            }>
            assignment
          </FontIcon>
        }
        onClick={undefined}
        suffixes={
          Array [
            "red",
            "pink",
            "purple",
            "deep-purple",
            "indigo",
            "blue",
            "light-blue",
            "cyan",
            "teal",
            "green",
            "light-green",
            "lime",
            "yellow",
            "amber",
            "orange",
            "deep-orange",
            "brown",
            "grey",
            "blue-grey",
          ]
        } />
    }
    primaryText="Project"
    threeLines={true}>
    <li
      className="md-list-item">
      <AccessibleFakeButtonInked
        __SUPER_SECRET_REF__={[Function]}
        aria-expanded={null}
        className="md-list-tile md-text md-list-tile--avatar"
        component="div"
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}>
        <AccessibleFakeButton
          aria-expanded={null}
          className="md-list-tile md-text md-list-tile--avatar"
          component="div"
          ink={
            <InkContainer
              className={undefined}
              disabledInteractions={undefined}
              inkClassName={undefined}
              inkStyle={undefined}
              style={undefined}
              transitionEnterTimeout={450}
              transitionLeaveTimeout={300}
              transitionOverlap={150}
              waitForInkTransition={undefined} />
          }
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}>
          <div
            aria-expanded={null}
            aria-pressed={false}
            className="md-fake-btn md-pointer--hover md-list-tile md-text md-list-tile--avatar"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}>
            <InkContainer
              transitionEnterTimeout={450}
              transitionLeaveTimeout={300}
              transitionOverlap={150}>
              <ReactTransitionGroup
                childFactory={[Function]}
                className="md-ink-container"
                component="div">
                <div
                  className="md-ink-container" />
              </ReactTransitionGroup>
            </InkContainer>
            <TileAddon
              activeClassName="md-text--theme-primary"
              avatar={
                <Avatar
                  icon={
                    <FontIcon
                      iconClassName="material-icons"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }>
                      assignment
                    </FontIcon>
                  }
                  onClick={undefined}
                  suffixes={
                    Array [
                      "red",
                      "pink",
                      "purple",
                      "deep-purple",
                      "indigo",
                      "blue",
                      "light-blue",
                      "cyan",
                      "teal",
                      "green",
                      "light-green",
                      "lime",
                      "yellow",
                      "amber",
                      "orange",
                      "deep-orange",
                      "brown",
                      "grey",
                      "blue-grey",
                    ]
                  } />
              }>
              <div
                className="md-tile-addon md-tile-addon--avatar">
                <Avatar
                  icon={
                    <FontIcon
                      iconClassName="material-icons"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }>
                      assignment
                    </FontIcon>
                  }
                  suffixes={
                    Array [
                      "red",
                      "pink",
                      "purple",
                      "deep-purple",
                      "indigo",
                      "blue",
                      "light-blue",
                      "cyan",
                      "teal",
                      "green",
                      "light-green",
                      "lime",
                      "yellow",
                      "amber",
                      "orange",
                      "deep-orange",
                      "brown",
                      "grey",
                      "blue-grey",
                    ]
                  }>
                  <div
                    className="md-inline-block md-avatar md-avatar--default">
                    <div
                      className="md-avatar-content">
                      <FontIcon
                        iconClassName="material-icons"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }>
                        <i
                          className="md-icon material-icons"
                          style={
                            Object {
                              "color": undefined,
                            }
                          }>
                          assignment
                        </i>
                      </FontIcon>
                    </div>
                  </div>
                </Avatar>
              </div>
            </TileAddon>
            <ListItemText
              activeClassName="md-text--theme-primary"
              className="md-tile-content--left-avatar"
              primaryText="Project"
              threeLines={true}>
              <div
                className="md-tile-content md-tile-content--left-avatar">
                <div
                  className="md-tile-text--primary md-text">
                  Project
                </div>
              </div>
            </ListItemText>
            <TileAddon
              activeClassName="md-text--theme-primary" />
          </div>
        </AccessibleFakeButton>
      </AccessibleFakeButtonInked>
    </li>
  </ListItem>
</Component>
`;

exports[`Item component renders a task with tags correctly 1`] = `
<Component
  item={
    Object {
      "__typename": "Task",
      "isCompleted": false,
      "name": "Task",
      "tags": Array [
        "@tag",
        "@another-tag",
      ],
    }
  }>
  <ListItem
    activeClassName="md-text--theme-primary"
    component="div"
    expanderIconChildren="keyboard_arrow_down"
    leftAvatar={
      <Avatar
        icon={
          <FontIcon
            iconClassName="material-icons"
            style={
              Object {
                "color": undefined,
              }
            }>
            done
          </FontIcon>
        }
        onClick={undefined}
        suffixes={
          Array [
            "red",
            "pink",
            "purple",
            "deep-purple",
            "indigo",
            "blue",
            "light-blue",
            "cyan",
            "teal",
            "green",
            "light-green",
            "lime",
            "yellow",
            "amber",
            "orange",
            "deep-orange",
            "brown",
            "grey",
            "blue-grey",
          ]
        } />
    }
    primaryText="Task"
    secondaryText={
      <div
        className="Item-chip-container">
        <Chip
          label="@tag"
          rotateIcon={true}
          style={
            Object {
              "marginRight": 5,
              "marginTop": 3,
            }
          }>
          add_circle
        </Chip>
        <Chip
          label="@another-tag"
          rotateIcon={true}
          style={
            Object {
              "marginRight": 5,
              "marginTop": 3,
            }
          }>
          add_circle
        </Chip>
      </div>
    }
    threeLines={true}>
    <li
      className="md-list-item">
      <AccessibleFakeButtonInked
        __SUPER_SECRET_REF__={[Function]}
        aria-expanded={null}
        className="md-list-tile md-text md-list-tile--three-lines"
        component="div"
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}>
        <AccessibleFakeButton
          aria-expanded={null}
          className="md-list-tile md-text md-list-tile--three-lines"
          component="div"
          ink={
            <InkContainer
              className={undefined}
              disabledInteractions={undefined}
              inkClassName={undefined}
              inkStyle={undefined}
              style={undefined}
              transitionEnterTimeout={450}
              transitionLeaveTimeout={300}
              transitionOverlap={150}
              waitForInkTransition={undefined} />
          }
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}>
          <div
            aria-expanded={null}
            aria-pressed={false}
            className="md-fake-btn md-pointer--hover md-list-tile md-text md-list-tile--three-lines"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}>
            <InkContainer
              transitionEnterTimeout={450}
              transitionLeaveTimeout={300}
              transitionOverlap={150}>
              <ReactTransitionGroup
                childFactory={[Function]}
                className="md-ink-container"
                component="div">
                <div
                  className="md-ink-container" />
              </ReactTransitionGroup>
            </InkContainer>
            <TileAddon
              activeClassName="md-text--theme-primary"
              avatar={
                <Avatar
                  icon={
                    <FontIcon
                      iconClassName="material-icons"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }>
                      done
                    </FontIcon>
                  }
                  onClick={undefined}
                  suffixes={
                    Array [
                      "red",
                      "pink",
                      "purple",
                      "deep-purple",
                      "indigo",
                      "blue",
                      "light-blue",
                      "cyan",
                      "teal",
                      "green",
                      "light-green",
                      "lime",
                      "yellow",
                      "amber",
                      "orange",
                      "deep-orange",
                      "brown",
                      "grey",
                      "blue-grey",
                    ]
                  } />
              }>
              <div
                className="md-tile-addon md-tile-addon--avatar">
                <Avatar
                  icon={
                    <FontIcon
                      iconClassName="material-icons"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }>
                      done
                    </FontIcon>
                  }
                  suffixes={
                    Array [
                      "red",
                      "pink",
                      "purple",
                      "deep-purple",
                      "indigo",
                      "blue",
                      "light-blue",
                      "cyan",
                      "teal",
                      "green",
                      "light-green",
                      "lime",
                      "yellow",
                      "amber",
                      "orange",
                      "deep-orange",
                      "brown",
                      "grey",
                      "blue-grey",
                    ]
                  }>
                  <div
                    className="md-inline-block md-avatar md-avatar--default">
                    <div
                      className="md-avatar-content">
                      <FontIcon
                        iconClassName="material-icons"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }>
                        <i
                          className="md-icon material-icons"
                          style={
                            Object {
                              "color": undefined,
                            }
                          }>
                          done
                        </i>
                      </FontIcon>
                    </div>
                  </div>
                </Avatar>
              </div>
            </TileAddon>
            <ListItemText
              activeClassName="md-text--theme-primary"
              className="md-tile-content--left-avatar"
              primaryText="Task"
              secondaryText={
                <div
                  className="Item-chip-container">
                  <Chip
                    label="@tag"
                    rotateIcon={true}
                    style={
                      Object {
                        "marginRight": 5,
                        "marginTop": 3,
                      }
                    }>
                    add_circle
                  </Chip>
                  <Chip
                    label="@another-tag"
                    rotateIcon={true}
                    style={
                      Object {
                        "marginRight": 5,
                        "marginTop": 3,
                      }
                    }>
                    add_circle
                  </Chip>
                </div>
              }
              threeLines={true}>
              <div
                className="md-tile-content md-tile-content--left-avatar">
                <div
                  className="md-tile-text--primary md-text">
                  Task
                </div>
                <div
                  className="md-tile-text--secondary md-text--secondary md-tile-text--three-lines">
                  <div
                    className="Item-chip-container">
                    <Chip
                      label="@tag"
                      rotateIcon={true}
                      style={
                        Object {
                          "marginRight": 5,
                          "marginTop": 3,
                        }
                      }>
                      <button
                        className="md-chip"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        style={
                          Object {
                            "marginRight": 5,
                            "marginTop": 3,
                          }
                        }
                        type="button">
                        <span
                          className="md-chip-text">
                          @tag
                        </span>
                      </button>
                    </Chip>
                    <Chip
                      label="@another-tag"
                      rotateIcon={true}
                      style={
                        Object {
                          "marginRight": 5,
                          "marginTop": 3,
                        }
                      }>
                      <button
                        className="md-chip"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        style={
                          Object {
                            "marginRight": 5,
                            "marginTop": 3,
                          }
                        }
                        type="button">
                        <span
                          className="md-chip-text">
                          @another-tag
                        </span>
                      </button>
                    </Chip>
                  </div>
                </div>
              </div>
            </ListItemText>
            <TileAddon
              activeClassName="md-text--theme-primary" />
          </div>
        </AccessibleFakeButton>
      </AccessibleFakeButtonInked>
    </li>
  </ListItem>
</Component>
`;

exports[`Item component renders an uncompleted task correctly 1`] = `
<Component
  item={
    Object {
      "__typename": "Task",
      "isCompleted": false,
      "name": "Task",
    }
  }>
  <ListItem
    activeClassName="md-text--theme-primary"
    component="div"
    expanderIconChildren="keyboard_arrow_down"
    leftAvatar={
      <Avatar
        icon={
          <FontIcon
            iconClassName="material-icons"
            style={
              Object {
                "color": undefined,
              }
            }>
            done
          </FontIcon>
        }
        onClick={undefined}
        suffixes={
          Array [
            "red",
            "pink",
            "purple",
            "deep-purple",
            "indigo",
            "blue",
            "light-blue",
            "cyan",
            "teal",
            "green",
            "light-green",
            "lime",
            "yellow",
            "amber",
            "orange",
            "deep-orange",
            "brown",
            "grey",
            "blue-grey",
          ]
        } />
    }
    primaryText="Task"
    threeLines={true}>
    <li
      className="md-list-item">
      <AccessibleFakeButtonInked
        __SUPER_SECRET_REF__={[Function]}
        aria-expanded={null}
        className="md-list-tile md-text md-list-tile--avatar"
        component="div"
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}>
        <AccessibleFakeButton
          aria-expanded={null}
          className="md-list-tile md-text md-list-tile--avatar"
          component="div"
          ink={
            <InkContainer
              className={undefined}
              disabledInteractions={undefined}
              inkClassName={undefined}
              inkStyle={undefined}
              style={undefined}
              transitionEnterTimeout={450}
              transitionLeaveTimeout={300}
              transitionOverlap={150}
              waitForInkTransition={undefined} />
          }
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}>
          <div
            aria-expanded={null}
            aria-pressed={false}
            className="md-fake-btn md-pointer--hover md-list-tile md-text md-list-tile--avatar"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}>
            <InkContainer
              transitionEnterTimeout={450}
              transitionLeaveTimeout={300}
              transitionOverlap={150}>
              <ReactTransitionGroup
                childFactory={[Function]}
                className="md-ink-container"
                component="div">
                <div
                  className="md-ink-container" />
              </ReactTransitionGroup>
            </InkContainer>
            <TileAddon
              activeClassName="md-text--theme-primary"
              avatar={
                <Avatar
                  icon={
                    <FontIcon
                      iconClassName="material-icons"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }>
                      done
                    </FontIcon>
                  }
                  onClick={undefined}
                  suffixes={
                    Array [
                      "red",
                      "pink",
                      "purple",
                      "deep-purple",
                      "indigo",
                      "blue",
                      "light-blue",
                      "cyan",
                      "teal",
                      "green",
                      "light-green",
                      "lime",
                      "yellow",
                      "amber",
                      "orange",
                      "deep-orange",
                      "brown",
                      "grey",
                      "blue-grey",
                    ]
                  } />
              }>
              <div
                className="md-tile-addon md-tile-addon--avatar">
                <Avatar
                  icon={
                    <FontIcon
                      iconClassName="material-icons"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }>
                      done
                    </FontIcon>
                  }
                  suffixes={
                    Array [
                      "red",
                      "pink",
                      "purple",
                      "deep-purple",
                      "indigo",
                      "blue",
                      "light-blue",
                      "cyan",
                      "teal",
                      "green",
                      "light-green",
                      "lime",
                      "yellow",
                      "amber",
                      "orange",
                      "deep-orange",
                      "brown",
                      "grey",
                      "blue-grey",
                    ]
                  }>
                  <div
                    className="md-inline-block md-avatar md-avatar--default">
                    <div
                      className="md-avatar-content">
                      <FontIcon
                        iconClassName="material-icons"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }>
                        <i
                          className="md-icon material-icons"
                          style={
                            Object {
                              "color": undefined,
                            }
                          }>
                          done
                        </i>
                      </FontIcon>
                    </div>
                  </div>
                </Avatar>
              </div>
            </TileAddon>
            <ListItemText
              activeClassName="md-text--theme-primary"
              className="md-tile-content--left-avatar"
              primaryText="Task"
              threeLines={true}>
              <div
                className="md-tile-content md-tile-content--left-avatar">
                <div
                  className="md-tile-text--primary md-text">
                  Task
                </div>
              </div>
            </ListItemText>
            <TileAddon
              activeClassName="md-text--theme-primary" />
          </div>
        </AccessibleFakeButton>
      </AccessibleFakeButtonInked>
    </li>
  </ListItem>
</Component>
`;

exports[`Item component renders the delete button when it has the canDelete prop 1`] = `
<Component
  canDelete={true}
  item={
    Object {
      "__typename": "Task",
      "isCompleted": false,
      "name": "Task",
    }
  }>
  <ListItem
    activeClassName="md-text--theme-primary"
    component="div"
    expanderIconChildren="keyboard_arrow_down"
    leftAvatar={
      <Avatar
        icon={
          <FontIcon
            iconClassName="material-icons"
            style={
              Object {
                "color": undefined,
              }
            }>
            done
          </FontIcon>
        }
        onClick={undefined}
        suffixes={
          Array [
            "red",
            "pink",
            "purple",
            "deep-purple",
            "indigo",
            "blue",
            "light-blue",
            "cyan",
            "teal",
            "green",
            "light-green",
            "lime",
            "yellow",
            "amber",
            "orange",
            "deep-orange",
            "brown",
            "grey",
            "blue-grey",
          ]
        } />
    }
    primaryText="Task"
    threeLines={true}>
    <li
      className="md-list-item">
      <AccessibleFakeButtonInked
        __SUPER_SECRET_REF__={[Function]}
        aria-expanded={null}
        className="md-list-tile md-text md-list-tile--avatar"
        component="div"
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}>
        <AccessibleFakeButton
          aria-expanded={null}
          className="md-list-tile md-text md-list-tile--avatar"
          component="div"
          ink={
            <InkContainer
              className={undefined}
              disabledInteractions={undefined}
              inkClassName={undefined}
              inkStyle={undefined}
              style={undefined}
              transitionEnterTimeout={450}
              transitionLeaveTimeout={300}
              transitionOverlap={150}
              waitForInkTransition={undefined} />
          }
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}>
          <div
            aria-expanded={null}
            aria-pressed={false}
            className="md-fake-btn md-pointer--hover md-list-tile md-text md-list-tile--avatar"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}>
            <InkContainer
              transitionEnterTimeout={450}
              transitionLeaveTimeout={300}
              transitionOverlap={150}>
              <ReactTransitionGroup
                childFactory={[Function]}
                className="md-ink-container"
                component="div">
                <div
                  className="md-ink-container" />
              </ReactTransitionGroup>
            </InkContainer>
            <TileAddon
              activeClassName="md-text--theme-primary"
              avatar={
                <Avatar
                  icon={
                    <FontIcon
                      iconClassName="material-icons"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }>
                      done
                    </FontIcon>
                  }
                  onClick={undefined}
                  suffixes={
                    Array [
                      "red",
                      "pink",
                      "purple",
                      "deep-purple",
                      "indigo",
                      "blue",
                      "light-blue",
                      "cyan",
                      "teal",
                      "green",
                      "light-green",
                      "lime",
                      "yellow",
                      "amber",
                      "orange",
                      "deep-orange",
                      "brown",
                      "grey",
                      "blue-grey",
                    ]
                  } />
              }>
              <div
                className="md-tile-addon md-tile-addon--avatar">
                <Avatar
                  icon={
                    <FontIcon
                      iconClassName="material-icons"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }>
                      done
                    </FontIcon>
                  }
                  suffixes={
                    Array [
                      "red",
                      "pink",
                      "purple",
                      "deep-purple",
                      "indigo",
                      "blue",
                      "light-blue",
                      "cyan",
                      "teal",
                      "green",
                      "light-green",
                      "lime",
                      "yellow",
                      "amber",
                      "orange",
                      "deep-orange",
                      "brown",
                      "grey",
                      "blue-grey",
                    ]
                  }>
                  <div
                    className="md-inline-block md-avatar md-avatar--default">
                    <div
                      className="md-avatar-content">
                      <FontIcon
                        iconClassName="material-icons"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }>
                        <i
                          className="md-icon material-icons"
                          style={
                            Object {
                              "color": undefined,
                            }
                          }>
                          done
                        </i>
                      </FontIcon>
                    </div>
                  </div>
                </Avatar>
              </div>
            </TileAddon>
            <ListItemText
              activeClassName="md-text--theme-primary"
              className="md-tile-content--left-avatar"
              primaryText="Task"
              threeLines={true}>
              <div
                className="md-tile-content md-tile-content--left-avatar">
                <div
                  className="md-tile-text--primary md-text">
                  Task
                </div>
              </div>
            </ListItemText>
            <TileAddon
              activeClassName="md-text--theme-primary" />
            <ButtonTooltipedInked
              icon={true}
              inkTransitionEnterTimeout={450}
              inkTransitionLeaveTimeout={300}
              inkTransitionOverlap={150}
              onClick={[Function]}>
              <ButtonTooltiped
                icon={true}
                ink={
                  <InkContainer
                    className={undefined}
                    disabledInteractions={undefined}
                    inkClassName={undefined}
                    inkStyle={undefined}
                    style={undefined}
                    transitionEnterTimeout={450}
                    transitionLeaveTimeout={300}
                    transitionOverlap={150}
                    waitForInkTransition={undefined} />
                }
                onClick={[Function]}
                tooltipDelay={0}
                tooltipPosition="bottom"
                tooltipTransitionEnterTimeout={150}
                tooltipTransitionLeaveTimeout={150}>
                <Button
                  fixedPosition="br"
                  icon={true}
                  iconBefore={true}
                  ink={
                    <InkContainer
                      className={undefined}
                      disabledInteractions={undefined}
                      inkClassName={undefined}
                      inkStyle={undefined}
                      style={undefined}
                      transitionEnterTimeout={450}
                      transitionLeaveTimeout={300}
                      transitionOverlap={150}
                      waitForInkTransition={undefined} />
                  }
                  onClick={[Function]}
                  type="button">
                  <button
                    className="md-inline-block md-btn md-btn--icon md-pointer--hover"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    type="button">
                    <InkContainer
                      transitionEnterTimeout={450}
                      transitionLeaveTimeout={300}
                      transitionOverlap={150}>
                      <ReactTransitionGroup
                        childFactory={[Function]}
                        className="md-ink-container"
                        component="div">
                        <div
                          className="md-ink-container" />
                      </ReactTransitionGroup>
                    </InkContainer>
                    <FontIcon
                      iconClassName="material-icons">
                      <i
                        className="md-icon material-icons">
                        delete
                      </i>
                    </FontIcon>
                  </button>
                </Button>
              </ButtonTooltiped>
            </ButtonTooltipedInked>
          </div>
        </AccessibleFakeButton>
      </AccessibleFakeButtonInked>
    </li>
  </ListItem>
</Component>
`;
